Moved search.js into js folder, removed unused search.html

--- a/frontend/loginPages/login.html
+++ b/frontend/loginPages/login.html
@@ -125,7 +125,7 @@
         <script type="module" src="../js/session.js"></script>
         
         <!-- Script for searching-->
-        <script src="../search.js"></script>   
+        <script src="../js/search.js"></script>   
       
         <script type="module">
             import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
