--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -216,7 +216,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
         
         <!-- Script for searching-->
-        <script src="../search.js"></script>
+        <script src="../js/search.js"></script>
 
         <!-- Script for checking user login and logout functionality-->
         <script type="module" src="../js/session.js"></script>
