Connect and show reviews on books

--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -195,26 +195,9 @@
                         </form>
                     </div>
                     <div class="popupContentViewReviews" id="viewReviews">
-                        <h1 style="font-weight: bold;" id="litTitle">Reviews for [book_title]</h1>
-                        <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
-                        <div class="reviewContainer">
-                            <h1 class="reviewRating"> &#9733; &#9733; &#9733; &#9733; &#9733; </h1>
-                            <p> Here's my thoughts on this book. Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah!</p>
-                            <a href="#"> My Username </a>
-                            <p> Created on: 11/5/2025 </p>
-                        </div>
-                        <div class="reviewContainer">
-                            <h1 class="reviewRating"> &#9733; &#9733; &#9733; &#9733; &#9733; </h1>
-                            <p> Here's my thoughts on this book. Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah!</p>
-                            <a href="#"> My Username </a>
-                            <p> Created on: 11/5/2025 </p>
-                        </div>
-                        <div class="reviewContainer">
-                            <h1 class="reviewRating"> &#9733; &#9733; &#9733; &#9733; &#9733; </h1>
-                            <p> Here's my thoughts on this book. Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah!</p>
-                            <a href="#"> My Username </a>
-                            <p> Created on: 11/5/2025 </p>
-                        </div>
+                        <h1 id="litTitle" style="font-weight:bold;">Reviews for [book_title]</h1>
+                        <hr style="background-color: var(--offWhite); width: 80%" class="mb-4">
+                        <div id="reviewsList"></div>
                     </div>
                     <span class="close">&times;</span>
                 </div>
