Adjust parent container of reviews

--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -196,7 +196,7 @@
                     </div>
                     <div class="popupContentViewReviews" id="viewReviews">
                         <h1 id="litTitle" style="font-weight:bold;">Reviews for [book_title]</h1>
-                        <hr style="background-color: var(--offWhite); width: 80%" class="mb-4">
+                        <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                         <div id="reviewsList"></div>
                     </div>
                     <span class="close">&times;</span>
