added colorblind mode and dyslexia friendly mode

--- a/frontend/loginPages/createAccount.html
+++ b/frontend/loginPages/createAccount.html
@@ -124,6 +124,9 @@
 
         <!-- Script for searching-->
         <script src="../js/search.js"></script>
+
+        <!-- Script for settings changes -->
+        <script src="../js/settings.js"></script>
       
         <script type="module">
             import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
