--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -264,6 +264,9 @@
             });
         </script>
 
+        <!-- Script for settings changes -->
+        <script src="../js/settings.js"></script>
+
     </body>
 
 </html>
