--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -188,6 +188,9 @@
 
         <!-- Profile Script-->
         <script type="module" src="../js/profile.js"></script>
+
+        <!-- Script for settings changes -->
+        <script src="../js/settings.js"></script>
     </body>
 
 </html>
