--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -220,6 +220,9 @@
         <!-- Script for browse-->
         <script type="module" src="../js/browse.js"></script>
 
+        <!-- Script for settings changes -->
+        <script src="../js/settings.js"></script>
+
     </body>
 
 </html>
