--- a/frontend/userPages/myReads.html
+++ b/frontend/userPages/myReads.html
@@ -124,6 +124,9 @@
 
         <!-- Script for checking user login and logout functionality-->
         <script type="module" src="../js/session.js"></script>
+
+        <!-- Script for settings changes -->
+        <script src="../js/settings.js"></script>
     </body>
 
 </html>
