--- a/frontend/loginPages/createAccount.html
+++ b/frontend/loginPages/createAccount.html
@@ -126,7 +126,7 @@
         <script src="../js/search.js"></script>
 
         <!-- Script for settings changes -->
-        <script src="../js/settings.js"></script>
+        <script tpye="module" src="../js/settings.js"></script>
       
         <script type="module">
             import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
