--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -265,7 +265,7 @@
         </script>
 
         <!-- Script for settings changes -->
-        <script src="../js/settings.js"></script>
+        <script tpye="module" src="../js/settings.js"></script>
 
     </body>
 
