fixed typo that caused settings not to work

--- a/frontend/loginPages/login.html
+++ b/frontend/loginPages/login.html
@@ -128,7 +128,7 @@
         <script src="../js/search.js"></script> 
         
         <!-- Script for settings changes -->
-        <script tpye="module" src="../js/settings.js"></script>
+        <script type="module" src="../js/settings.js"></script>
       
         <script type="module">
             import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
