--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -159,7 +159,7 @@
         <script type="module" src="../js/session.js"></script>
 
         <!-- Script for settings changes -->
-        <script tpye="module" src="../js/settings.js"></script>
+        <script type="module" src="../js/settings.js"></script>
 
     </body>
 
