--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -87,14 +87,16 @@
 
                     <h1 class="title-text">My Collections</h1>
 
-                    <select class="collections-dropdown">
-                        <option>One</option>
-                        <option>Two</option>
-                        <option>Three</option>
-                    </select>
-
+                    <select id="collectionsDropdown" class="collections-dropdown"></select>
                     <br><br>
-
+                    <table class="my-collections-reads-table">
+                        <thead>
+                            <tr><th>Collection Title</th></tr>
+                        </thead>
+                        <tbody id="collectionsTableBody"></tbody>
+                    </table>
+                    
+<!-- 
                     <table class="my-collections-reads-table">
                         <tr>
                             <th>Collection Title</th>
@@ -109,7 +111,7 @@
                             <td>Book3</td>
                         </tr>
                     </table>
-                </div>
+                </div> -->
             </div>
 
         </section>
@@ -119,6 +121,9 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
         
+        <!-- Script for page data -->
+        <script type="module" src="../js/myCollections.js"></script>
+
         <!-- Script for searching-->
         <script src="../js/search.js"></script>
 
