updated the look of reviews (and fixed rating visuals) on the profile page

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -129,16 +129,18 @@
                 <span class="third-section-brown m-3">
                     <div class="third-section-topper-brown">About Me</div>
                     <div class="third-section-text">
-                        <div style="font-weight: bold; font-size: 3vh;">Bio</div>
-                        <div id="profileBio">Here's a small blurb about me and what I enjoy reading. Check out my profile!</div>
+                        <div class="userLabel">Bio</div>
+                        <div class="userDesc" id="profileBio">Here's a small blurb about me and what I enjoy reading. Check out my profile!</div>
                     </div>
+                    <hr style="width: 90%; background-color: var(--darkBrown);">
                     <div class="third-section-text">
-                        <div style="font-weight: bold; font-size: 3vh;">Favorite Genres</div>
-                        <div id="profileGenres">Mystery, Horror, Romance</div>
+                        <div class="userLabel">Favorite Genres</div>
+                        <div class="userDesc" id="profileGenres">Mystery, Horror, Romance</div>
                     </div>
+                    <hr style="width: 90%; background-color: var(--darkBrown);">
                     <div class="third-section-text">
-                        <div style="font-weight: bold; font-size: 3vh;">Favorite Book</div>
-                        <div id="profileBook">To Kill a Mockingbird</div>
+                        <div class="userLabel">Favorite Book</div>
+                        <div class="userDesc" id="profileBook">To Kill a Mockingbird</div>
                     </div>
                 </span>
 
