added button to profile page

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -147,11 +147,17 @@
                 <span class="third-section-brown m-3">
                     <div class="third-section-topper-brown">My Reviews</div>
                     <div id="profileReviews" class="third-section-text">Loading Reviews...</div>
+                    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 3vh;">
+                        <a href="myReads.html"> <button class="main-button-brown-small"> View All Reviews </button> </a>
+                    </div>
                 </span>
 
                 <span class="third-section-brown m-3">
                     <div class="third-section-topper-brown">My Collections</div>
                     <div id="profileCollections" class="third-section-text">Loading Your Collections...</div>
+                    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 3vh;">
+                        <a href="myCollections.html"> <button class="main-button-brown-small"> View All Collections </button> </a>
+                    </div>
                 </span>
             </div>
 
