--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -22,6 +22,12 @@
                         <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
+                    <div class="tagline"> 
+                        <img src="../images/taglineLeft.svg" style="height: 90%;">
+                        <p style="margin-left: 4%; margin-right: 4%; margin-top: 3%; white-space: nowrap;"> A community for any type of reader. </p>
+                        <img src="../images/taglineRight.svg" style="height: 90%;">
+                    </div>
+
                     <div class="dropdown d-flex justify-content-center right-div">
                         <button class="unstyled-button" data-toggle="dropdown">
                             <img class="PFPImg" id="navProfileImg" src="../images/loggedOutPFP.svg" alt="pfp">
@@ -92,8 +98,10 @@
                         <a href="#" id="followingLink"><span id="followingCount">0 following</span></a>
                     </div>
                     <button id="followBtn" class="main-button-brown-xsmall mt-3" style="display:none;">Follow</button>
-                    <button id="editProfileBtn" class="main-button-brown-small mt-3">Edit Profile</button>
-                    <button id="makeCollection" class="main-button-brown-small mt-3 makeCollectionPopup">Make Collection</button>
+                    <div class="d-flex flex-row align-items-center justify-content-center mt-3">
+                        <button id="editProfileBtn" class="main-button-brown-small m-2">Edit Profile</button> 
+                        <button id="makeCollection" class="main-button-brown-small m-2 makeCollectionPopup">Make Collection</button>
+                    </div>
                 </div>
             </div>
 
@@ -147,17 +155,13 @@
                 <span class="third-section-brown m-3">
                     <div class="third-section-topper-brown">My Reviews</div>
                     <div id="profileReviews" class="third-section-text">Loading Reviews...</div>
-                    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 3vh;">
-                        <a href="myReads.html"> <button class="main-button-brown-small"> View All Reviews </button> </a>
-                    </div>
+                    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 3vh;"> </div>
                 </span>
 
                 <span class="third-section-brown m-3">
                     <div class="third-section-topper-brown">My Collections</div>
                     <div id="profileCollections" class="third-section-text">Loading Your Collections...</div>
-                    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 3vh;">
-                        <a href="myCollections.html"> <button class="main-button-brown-small"> View All Collections </button> </a>
-                    </div>
+                    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 3vh;"> </div>
                 </span>
             </div>
 
