added dark mode toggle

--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -125,8 +125,8 @@
                             <fieldset>
                                 <label> Enable Dark Mode </label> <br>
                                 Changes the core column scheme of the website to darker tones. <br>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="a"> Enable </button>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="b"> Disable </button>
+                                <button type="button" class="main-button-brown-xsmall mt-2" id="darkToggleEnable"> Enable </button>
+                                <button type="button" class="main-button-brown-xsmall mt-2" id="darkToggleDisable"> Disable </button>
                             </fieldset>
                             <fieldset>
                                 <label> Enable Color Blind Mode </label> <br>
