Reformatted how books are displayed in My Collections

--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -91,7 +91,12 @@
                     <br><br>
                     <table class="my-collections-reads-table">
                         <thead>
-                            <tr><th>Collection Title</th></tr>
+                            <tr>
+                                <th>Cover</th>
+                                <th>Title</th>
+                                <th>Author</th>
+                                <th>Year</th>
+                            </tr>
                         </thead>
                         <tbody id="collectionsTableBody"></tbody>
                     </table>
