--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,13 +18,19 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="index.html"><img class="site-logo-img" src="/images/logo.svg" alt="Logo"></a>
-                        <a href="index.html" class="site-logo-text">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
+                    </div>
+
+                    <div class="tagline"> 
+                        <img src="../images/taglineLeft.svg" style="height: 90%;">
+                        <p style="margin-left: 4%; margin-right: 4%; margin-top: 3%; white-space: nowrap;"> A community for any type of reader. </p>
+                        <img src="../images/taglineRight.svg" style="height: 90%;">
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
                         <button class="unstyled-button" data-toggle="dropdown">
-                            <img class="PFPImg" src="/images/loggedOutPFP.svg" alt="pfp">
+                            <img class="PFPImg" id="navProfileImg" src="../images/loggedOutPFP.svg" alt="pfp">
                         </button>
                         <div class="dropdown-menu text-center">
                             <a class="dropdown-item" href="userPages/profile.html">My Profile</a>
