--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -106,10 +106,10 @@
             </div>
 
             <!-- Editable profile modal -->
-            <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content p-4">
-                        <h5 class="modal-title mb-3" id="editProfileModalLabel">Edit Your Profile</h5>
+            <div class="popup" id="editProfileModal">
+                <div class="popupContentEditProfile">
+                    <div style="width: 80%;">
+                        <h5 class="modal-title mb-3">Edit Your Profile</h5>
                         <label>Bio</label>
                         <textarea id="bioInput" class="form-control mb-2"></textarea>
                         <label>Favorite Genres</label>
@@ -121,6 +121,7 @@
                         <button id="saveProfileBtn" class="btn btn-success">Save Changes</button>
                     </div>
                 </div>
+                <span class="close">&times;</span>
             </div>
 
             <!-- Follower/Following modal -->
