--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -107,18 +107,19 @@
 
             <!-- Editable profile modal -->
             <div class="popup" id="editProfileModal">
-                <div class="popupContentEditProfile">
-                    <div style="width: 80%;">
-                        <h5 class="modal-title mb-3">Edit Your Profile</h5>
+                <div class="popupContent">
+                    <h1 style="font-weight: bold;" id="reviewTitle">Edit Your Profile</h1>
+                    <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
+                    <div class="popupContentForm">
                         <label>Bio</label>
                         <textarea id="bioInput" class="form-control mb-2"></textarea>
                         <label>Favorite Genres</label>
-                        <input id="genresInput" type="text" class="form-control mb-2" placeholder="e.g., Mystery, Horror, Romance">
+                        <input id="genresInput" type="text" class="form-control mb-2" style="margin-left: 0;" placeholder="e.g., Mystery, Horror, Romance">
                         <label>Favorite Book</label>
-                        <input id="bookInput" type="text" class="form-control mb-3" placeholder="e.g., To Kill a Mockingbird">
+                        <input id="bookInput" type="text" class="form-control mb-3" style="margin-left: 0;" placeholder="e.g., To Kill a Mockingbird">
                         <label>Choose a Profile Picture</label>
-                        <div id="avatarOptions" class="d-flex flex-wrap justify-content-center mb-3"></div>
-                        <button id="saveProfileBtn" class="btn btn-success">Save Changes</button>
+                        <div id="avatarOptions" class="d-flex flex-wrap justify-content-left mb-3"></div>
+                        <button id="saveProfileBtn" class="main-button-brown-small mb-4">Save Changes</button>
                     </div>
                 </div>
                 <span class="close">&times;</span>
@@ -168,8 +169,8 @@
 
             <!-- Create Collection Popup -->
             <div id="popupBackdrop" class="popupBackdrop"></div>
-            <div id="popup" class="popup">
-                <div class="popupContentCollection">
+            <div id="makeCollectionPopup" class="popup">
+                <div class="popupContent">
                     <h1 style="font-weight: bold;" id="reviewTitle">Create a New Collection</h1>
                     <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                     <form id="createCollectionForm">  
