preserve browse search filters over page changes

--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -151,6 +151,26 @@
                                     <img src="../images/collections/1.svg" class="collectionImg">
                                     <p class="collectionTitle">Collection Title 1</p>
                                 </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c2">
+                                    <img src="../images/collections/11.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 2</p>
+                                </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c3">
+                                    <img src="../images/collections/7.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 3</p>
+                                </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c4">
+                                    <img src="../images/collections/10.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 4</p>
+                                </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c5">
+                                    <img src="../images/collections/4.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 5</p>
+                                </div>
                             </fieldset>
                             <button type="submit" class="main-button-brown-small mb-4" id="submitCollectionChoice">Choose Collections</button>
                         </form>
