added new collection icons

--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -104,12 +104,6 @@
                         <hr style="background-color: var(--darkBrown);">
                         <form>
                             <fieldset>
-                                <label> Account Privacy </label> <br>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Private Account</button> <br>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Private All Reads</button> <br>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Private All Collections</button> 
-                            </fieldset>
-                            <fieldset>
                                 <label> Change Username </label> 
                                 <p> Enter new username below. </p>
                                 <form id="usernameForm">
@@ -119,9 +113,9 @@
                                 </form>
                             </fieldset>
                             <fieldset>
-                                <label> Account Data Options </label> <br>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Clear Account Data</button> <br>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Delete Account</button>
+                                <label style="font-weight: bold;"> Account Data Options </label> <br>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Delete Account</button> 
+                                <strong style="margin-left: 1%; color: var(--offWhite);"> WARNING! </strong> This cannot be undone.
                             </fieldset>
                         </form>
 
