changed followers popups to match closer to format

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -128,7 +128,7 @@
             <!-- Follower/Following modal -->
             <div class="modal fade" id="followModal" tabindex="-1" role="dialog" aria-labelledby="followModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content p-4">
+                    <div class="modal-content p-4 popupSmall">
                         <div id="followModalBody"></div>
                     </div>
                 </div>
