--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,6 +86,10 @@
 
         </header>
 
+        <div class="portraitWarning">
+            <p>Please turn your device sideways for the best user experience.</p>
+        </div>
+
         <section>
             <h1 class="title-text"> Welcome to TBRd! </h1>
             <h2 class="sub-title-text"> A community for every type of reader. </h2>
