added portrait mode warning to all pages

--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -86,6 +86,11 @@
 
         </header>
 
+        <!-- message to warn mobile users to turn their phone for best user experience -->
+        <div class="portraitWarning">
+            <p>Please turn your device sideways for the best user experience.</p>
+        </div>
+
         <section class="d-flex flex-column align-items-center text-center">
 
             <div class="sectionContentHolderClear mt-4 mb-4">
