--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,6 +86,7 @@
 
         </header>
 
+        <!-- message to warn mobile users to turn their phone for best user experience -->
         <div class="portraitWarning">
             <p>Please turn your device sideways for the best user experience.</p>
         </div>
