--- a/frontend/loginPages/createAccount.html
+++ b/frontend/loginPages/createAccount.html
@@ -86,7 +86,10 @@
 
         </header>
 
-
+        <!-- message to warn mobile users to turn their phone for best user experience -->
+        <div class="portraitWarning">
+            <p>Please turn your device sideways for the best user experience.</p>
+        </div>
 
         <section>
 
