--- a/frontend/subpages/contactUs.html
+++ b/frontend/subpages/contactUs.html
@@ -86,6 +86,11 @@
 
         </header>
 
+        <!-- message to warn mobile users to turn their phone for best user experience -->
+        <div class="portraitWarning">
+            <p>Please turn your device sideways for the best user experience.</p>
+        </div>
+
         <section>
 
             <h2 class="sub-title-text" style="font-weight: bold;"> Contact Us </h2>
