--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -85,6 +85,11 @@
 
         </header>
 
+        <!-- message to warn mobile users to turn their phone for best user experience -->
+        <div class="portraitWarning">
+            <p>Please turn your device sideways for the best user experience.</p>
+        </div>
+
         <section>
 
             <div class="d-flex flex-column align-items-center text-center">
