Remove and reorder books in collections

--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -101,6 +101,7 @@
                                 <th>Title</th>
                                 <th>Author</th>
                                 <th>Year</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody id="collectionsTableBody"></tbody>
