--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -138,6 +138,23 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- Edit Review Modal -->
+            <div class="modal fade" id="editReviewModal" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content p-4">
+                        <h5>Edit Review</h5>
+                        <label>Rating:</label>
+                        <div id="editReviewStars" class="stars"></div>
+                        <label class="mt-3">Text:</label>
+                        <textarea id="editReviewText" class="form-control" rows="4"></textarea>
+                        <div class="mt-3 d-flex justify-content-between">
+                            <button id="saveReviewBtn" class="btn btn-primary">Save</button>
+                            <button id="deleteReviewBtn" class="btn btn-danger">Delete Review</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="d-flex flex-wrap justify-content-center text-center mt-4">
 
