Edit profile fields only show placeholder when field is empty

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -117,7 +117,7 @@
                     <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                     <div class="popupContentForm">
                         <label>Bio</label>
-                        <textarea id="bioInput" class="form-control mb-2"></textarea>
+                        <textarea id="bioInput" class="form-control mb-2" placeholder="Tell us about yourself..."></textarea>
                         <label>Favorite Genres</label>
                         <input id="genresInput" type="text" class="form-control mb-2" style="margin-left: 0;" placeholder="e.g., Mystery, Horror, Romance">
                         <label>Favorite Book</label>
