Account deletion now functional

--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -120,7 +120,7 @@
                         <form>
                             <fieldset>
                                 <label style="font-weight: bold;"> Account Data Options </label> <br>
-                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Delete Account</button> 
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="deleteAccountBtn">Delete Account</button> 
                                 <strong style="margin-left: 1%; color: var(--offWhite);"> WARNING! </strong> This cannot be undone.
                             </fieldset>
                         </form>
