Collections viewing on own and other profiles

--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -137,7 +137,7 @@
                             </div>
                             <div class="iconsContainer">
                                 <button class="unstyled-button viewCollectionPopup">
-                                    <img class="icon" src="../images/viewCollection.svg" title="Add to Collection">
+                                    <img class="icon" src="../images/viewCollection.svg" title="View Collection">
                                 </button>
                             </div>
                         </div>
